2003-01-20  Sebastien Pouliot  <spouliot@videotron.ca>

	* CipherMode.cs: Added missing [Serializable] to enum.
	* CspProviderFlags.cs: Added missing [Serializable] to enum.
	* FromBase64Transform.cs: Added missing [Serializable] to enum.
	* PaddingMode.cs: Added missing [Serializable] to enum.

2003-01-19  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoTools.cs: Added internal class BlockProcessor to help
	implementation of block-based algorithms (like MAC and HMAC).
	* HMACSHA1.cs: Refactored to remove dependencies on CryptoStream,
	better constructors and Dispose support.
	* MACTripleDES.cs: Refactored to reuse new HMACSHA1 stuff, better
	constructors.

2003-01-18  Sebastien Pouliot  <spouliot@videotron.ca>

	* HMACSHA1.cs: Now use KeyBuilder to build the default key.

2003-01-12  Sebastien Pouliot  <spouliot@videotron.ca>

	* MACTripleDES.cs: Now working (the problem was with my stream usage
	which was removed for performance reason).
	* TripleDES.cs: Fixed key generation (wasn't called and returned
	null).

2003-01-09  Sebastien Pouliot  <spouliot@videotron.ca>

	* RNGCryptoServiceProvider.cs: Changed methods interacting with 
	the runtime as Internal<MethodName>. This will allow to make the
	class Windows-compatible by doing a switch at runtime.

2003-01-05  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoAPITransform.cs: Removed all TODO. This class will not be
	used by Mono. MS uses it with <algo>CryptoServiceProvider classes 
	to provide a common ICryptoTransform access to CryptoAPI. 

2003-01-03  Sebastien Pouliot  <spouliot@videotron.ca>

	* RC2CryptoServiceProvider.cs: Now about 2 time faster by inlining 
	methods and changing to UInt16 (instead of UInt32). 

2003-01-02  Sebastien Pouliot  <spouliot@videotron.ca>

	* RijndaelManaged.cs: Now 7 (encrypt) to 10 (decrypt) times faster 
	by removing allocation inside intensively called methods, using pre-
	calculated tables instead of Mult_GF methods and inlining most methods.
