@@ -16,21 +16,26 @@ public class CryptographicUnexpectedOperationException : CryptographicException 
 	public CryptographicUnexpectedOperationException ()
 		: base ("Error occured during a cryptographic operation.")
 	{
+		// Default to CORSEC_E_CRYPTO_UNEX_OPER (CorError.h)
+		HResult = unchecked ((int)0x80131431);
 	}
 
 	public CryptographicUnexpectedOperationException (string message)
 		: base (message)
 	{
+		HResult = unchecked ((int)0x80131431);
 	}
 
 	public CryptographicUnexpectedOperationException (string message, Exception inner)
 		: base (message, inner)
 	{
+		HResult = unchecked ((int)0x80131431);
 	}
 
 	public CryptographicUnexpectedOperationException (string format, string insert)
 		: base (String.Format(format, insert))
 	{
+		HResult = unchecked ((int)0x80131431);
 	}
 
 	protected CryptographicUnexpectedOperationException (SerializationInfo info, StreamingContext context)
